# OpenShell

./: .gitignore  AGENTS.md  Cargo.toml  dco-signatures.json  pyproject.toml
.github/: VOUCHED.td
.github/workflows/: docs-build.yml  docs-preview-pr.yml
architecture/: bf3-l7-auth-insertion.md  bf3-managed-proxy-scope.md  build-containers.md  custom-vm-runtime.md  gateway-single-node.md  policy-capability-engine.md  sandbox.md
capabilities/: discord-getme.yaml  discord-send.yaml  github-readonly.yaml  pypi-install.yaml  telegram-send.yaml
crates/openshell-cli/: Cargo.toml
crates/openshell-router/: Cargo.toml
crates/openshell-sandbox/: Cargo.toml  build.rs
crates/openshell-vm/: Cargo.toml  README.md  build.rs
crates/vf-bridge/: Cargo.toml
crates/vf-bridge/src/: main.rs
deploy/: setup-protected-egress-vf.sh
deploy/docker/: Dockerfile.ci  Dockerfile.cluster  Dockerfile.gateway  Dockerfile.images  Dockerfile.python-wheels  Dockerfile.python-wheels-macos
docs/: index.md
e2e/rust/: e2e-vm.sh
fern/: README.md  docs.yml  main.css
fern/scripts/: check_unconverted.sh  convert_myst_to_fern.py  convert_openshell_specific.py  copy_docs_to_fern.py  expand_includes.py
fern/versions/: v0.0.1.yml  v0.1.0.yml
pr-preview/pr-220/: index.json  searchindex.js
pr-preview/pr-223/: index.json  searchindex.js
pr-preview/pr-235/: index.json  searchindex.js
pr-preview/pr-240/: index.html  index.json  search.html  searchindex.js
pr-preview/pr-258/: index.json  searchindex.js
python/: conftest.py
tasks/: cluster.toml  test.toml  vm.toml
(+666 files in other folders)
